@@ -382,3 +382,5 @@
 2017-09-05 Fred Gleason <fredg@paravelsystems.com>
 	* Modified USER_AGENT string for Linux to include OS and architecture
 	information.
+2017-09-11 Fred Gleason <fredg@paravelsystems.com>
+	* Added a USER_AGENT entry for the Rivendell-C-API.
